--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "markdown-it-attrs": "^3.0.2",
     "markdown-it-container": "^2.0.0",
     "markdown-it-fontawesome": "^0.3.0",
+    "markdown-it-footnote": "^3.0.2",
     "moment": "^2.24.0",
     "sass": "^1.26.3",
     "slugify": "^1.4.0"
